# testTask

./: README.md
complexWay/: CMakeLists.txt  ConsoleParser.cpp  ConsoleParser.h  Counter.cpp  Counter.h  Executor.cpp  Executor.h  Hasher.cpp  Hasher.h  Helper.cpp  Helper.h  Makefile  Options.cpp  Options.h  Worker.cpp  Worker.h  main.cpp
simpleWay/: CMakeLists.txt  ConsoleParser.cpp  ConsoleParser.h  Executor.cpp  Executor.h  main.cpp
tst/: test-num  test_num.py
